style.css
:root {
  --primary-color: #1e90ff;
  --primary-dark: rgb(21, 102, 184);
  --secondary-color: #f65349;
  --secondary-color-dark: #b83b35;
}

* {
  margin: 0;
  padding: 0;
}

a {
  text-decoration: none;
}

/* * Classes & IDs * */

.name {
  color: #fff;
  letter-spacing: 1px;
  text-transform: uppercase;
}

.name-first-letter {
  font-size: 24px;
}

.top-nav {
  background-color: var(--primary-color);
  border-bottom: 2px solid var(--primary-dark);
  padding: 0.25rem 1rem;
  position: sticky;
  top: 0;
  width: 100%;
  z-index: 2;
}

.nav-left,
.nav-right {
  width: 240px;
}

.nav-logo {
  height: 50px;
  margin-right: 0.5rem;
  width: 50px;
}

.nav-social {
  height: 30px;
  width: 30px;
}

.scroll-list,
.social-list {
  list-style-type: none;
}

.scroll-list-item,
.social-list-item {
  margin: 0 0.75rem;
}

.social-list-item a {
  border-bottom: 2px solid transparent;
  transition: border-bottom 0.4s;
}

.scroll-list-item a {
  border-bottom: 2px solid transparent;
  color: #fff;
  transition: border-bottom 0.4s;
}

.scroll-list-item a:focus,
.scroll-list-item a:hover,
.social-list-item a:focus,
.social-list-item a:hover {
  border-bottom: 2px solid var(--secondary-color);
}

.hero {
  background-attachment: fixed;
  background-repeat: no-repeat;
  background-size: contain;
  height: 300px;
  overflow: hidden;
  position: relative;
  width: 100%;
}

.hero-text-container {
  -webkit-backdrop-filter: blur(12px);
  backdrop-filter: blur(12px);
  background: rgba(0, 0, 0, 0.6);
  border-radius: 10px;
  padding: 1rem 2rem;
}

.hero-text {
  color: white;
  font-size: 52px;
  font-weight: 200;
}

.portfolio {
  background-color: #eee;
}

.projects {
  margin: 1rem 0;
  text-align: center;
  width: 100%;
}

.project-card {
  background-color: white;
  border: 2px solid var(--secondary-color);
  border-radius: 10px;
  box-shadow: 8px 6px #b83c3556;
  height: 595px;
  margin: 1rem 2rem;
  padding: 1rem 2rem;
  width: 325px;
}

.project-title {
  color: var(--primary-color);
  font-size: 28px;
  margin-bottom: 0.5rem;
}

.project-img {
  border: 2px solid #777777;
  border-radius: 10px;
  width: 100%;
}

.project-btn-container {
  margin: 0.5rem 0 1rem;
  width: 60%;
}

.project-btn {
  background-color: rgba(21, 102, 184, 0.15);
  border: 2px solid var(--primary-color);
  border-radius: 5px;
  color: var(--primary-color);
  padding: 0.25rem 0.75rem;
  transition: all 0.4s;
}

.project-btn:focus,
.project-btn:hover {
  background-color: var(--primary-color);
  color: white;
  cursor: pointer;
  font-weight: 700;
}

figcaption {
  color: #777777;
  height: 115px;
}

.project-tools {
  height: 140px;
  padding: 1rem;
  width: 100%;
}

.tool-icon {
  height: 35px;
  margin: 0.5rem;
}

.skill-icons {
  margin-bottom: 5rem;
}

.skill-title {
  color: white;
  font-weight: 500;
}

.concept,
.post {
  background-color: white;
  border: 2px solid var(--primary-dark);
  border-radius: 10px;
  height: 340px;
  margin: 1rem;
  text-align: center;
  width: 300px;
}

.concept-icon {
  height: 175px;
}

.concept-icon-big {
  height: 175px;
  padding: 1rem;
}

.concept-text {
  background-color: var(--primary-dark);
  border-bottom-left-radius: 7px;
  border-bottom-right-radius: 7px;
  color: white;
  height: 170px;
  padding: 1.5rem;
}

.post {
  border: 2px solid var(--primary-dark);
  color: #777777;
  height: 425px;
}

.post-top {
  height: 50%;
}

.post-title {
  margin-bottom: 0.5rem;
  padding: 0.75rem 0 0;
}

.post-link {
  border-bottom: 2px solid transparent;
  color: var(--primary-dark);
  transition: all 0.4s;
}

.post-link:focus,
.post-link:hover {
  border-bottom: 2px solid var(--secondary-color);
  color: var(--secondary-color);
  cursor: pointer;
  font-size: 17px;
}

.post-img {
  border-radius: 1.5rem;
  max-height: 175px;
  padding: 0.5rem;
  width: 100%;
}

.post-content {
  background-color: var(--primary-dark);
  border-bottom-left-radius: 5px;
  border-bottom-right-radius: 5px;
  color: white;
  height: 100%;
  padding: 0.5rem 0.5rem 1rem;
}

.post-text {
  line-height: 1.75rem;
}

.post-text::before {
  color: white;
  content: open-quote;
  font-size: 24px;
}

.post-text::after {
  color: white;
  content: close-quote;
  font-size: 24px;
}

.post-footer {
  width: 100%;
}

.post-date {
  font-size: 12px;
  font-weight: 200;
}

.post-footer-link {
  border-bottom: 2px solid white;
  color: white;
  font-size: 14px;
  transition: all 0.4s;
}

.post-footer-link:focus,
.post-footer-link:hover {
  border-bottom: 2px solid var(--secondary-color);
  color: var(--secondary-color);
  cursor: pointer;
  font-weight: 500;
}

.contact {
  background-color: #eee;
}

.contact-text {
  color: var(--primary-color);
  font-size: 32px;
  font-weight: 200;
  margin: 1rem;
  text-align: center;
}

.contact-text:first-of-type {
  color: var(--primary-dark);
  font-weight: 400;
}

.message-btn {
  background-color: var(--secondary-color);
  border: 2px solid var(--secondary-color);
  border-radius: 5px;
  color: white;
  margin: 1rem;
  padding: 1rem 2rem;
  text-transform: uppercase;
  transition: all 0.4s;
}

.modal-btn {
  background-color: white;
  border: 2px solid var(--secondary-color);
  border-radius: 5px;
  color: var(--secondary-color);
  margin: 1rem;
  padding: 0.5rem 1rem;
  text-transform: uppercase;
  transition: all 0.4s;
}

.message-btn:focus,
.message-btn:hover,
.modal-btn:focus,
.modal-btn:hover {
  background-color: var(--secondary-color-dark);
  border: 2px solid var(--secondary-color-dark);
  color: white;
  cursor: pointer;
}

.message-btn > img {
  margin-right: 0.5rem;
  width: 25px;
}

footer {
  background-color: var(--primary-color);
  padding: 1rem;
  width: 100%;
}

.footer-list {
  list-style-type: none;
  width: 200px;
}

.modal {
  display: none;
  left: 50%;
  overflow: auto;
  position: fixed;
  top: 50%;
  transform: translate(-50%, -48%);
  z-index: 3;
}

.modal-top {
  background-color: firebrick;
  position: absolute;
  right: 10%;
  top: 15%;
  z-index: 3;
}

.close {
  width: 35px;
}

.close:focus,
.close:hover {
  cursor: pointer;
}

.overlay {
  background-color: rgba(255, 255, 255, 0.6);
  display: none;
  height: 100vh;
  left: 0;
  position: fixed;
  top: 0;
  width: 100vw;
  z-index: 2;
}

.mobile-menu-btn {
  background: transparent;
  border: none;
  cursor: pointer;
  display: none;
  margin: 0;
  outline: none;
  padding: 0;
}

.hamburger-icon {
  width: 35px;
}

/* * Reusuable Classes * */

.section {
  padding: 4rem 2rem 6rem 2rem;
}

.heading {
  border-bottom: 2px solid var(--secondary-color-dark);
  color: var(--secondary-color);
  font-size: 44px;
  font-weight: 200;
  margin: 0 0 4rem 0;
  width: 30%;
}

.section-footer-text {
  font-size: 20px;
  margin: 2rem 0 0;
  text-align: center;
}

.section-footer-text > a {
  border-bottom: 2px solid var(--primary-color);
  color: var(--primary-color);
  transition: all 0.4s;
}

.section-footer-text > a:focus,
.section-footer-text > a:hover {
  border-bottom: 2px solid var(--secondary-color-dark);
  color: var(--secondary-color-dark);
  font-weight: 500;
}

.hex::before {
  border-bottom: 30px solid var(--primary-color);
  border-left: 52px solid transparent;
  border-right: 52px solid transparent;
  content: " ";
  height: 0;
  position: absolute;
  top: -30px;
  width: 0;
}

.hex {
  background-color: var(--primary-color);
  height: 60px;
  margin: 2rem;
  position: relative;
  width: 104px;
}

.hex::after {
  border-left: 52px solid transparent;
  border-right: 52px solid transparent;
  border-top: 30px solid var(--primary-color);
  bottom: -30px;
  content: "";
  position: absolute;
  width: 0;
}

.dark-hex::before {
  border-bottom-color: var(--primary-dark);
}

.dark-hex {
  background-color: var(--primary-dark);
}

.dark-hex::after {
  border-top-color: var(--primary-dark);
}

.hex > img {
  height: 75%;
}

/* SVG color change classes */

.filter-primary {
  filter: invert(44%) sepia(21%) saturate(4746%) hue-rotate(189deg) brightness(99%) contrast(104%);
}

.filter-secondary {
  filter: invert(99%) sepia(42%) saturate(1839%) hue-rotate(335deg) brightness(91%) contrast(137%);
}

.filter-test {
  filter: invert(53%) sepia(90%) saturate(3316%) hue-rotate(330deg) brightness(96%) contrast(100%);
}

.filter-white {
  filter: invert(100%) sepia(0%) saturate(7500%) hue-rotate(227deg) brightness(111%) contrast(103%);
}

/* Flexbox classes */

.flex {
  display: flex;
}

.flex--column {
  flex-direction: column;
}

.flex--align-center {
  align-items: center;
}

.flex--align-end {
  align-items: flex-end;
}

.flex--justify-around {
  justify-content: space-around;
}

.flex--justify-between {
  justify-content: space-between;
}

.flex--justify-center {
  justify-content: center;
}

.flex--justify-end {
  justify-content: flex-end;
}

.flex--justify-evenly {
  justify-content: space-evenly;
}

.flex--wrap {
  flex-wrap: wrap;
}

/* * Media Queries * */

@media screen and (max-width: 768px) {
  .mobile-menu-btn {
    display: block;
  }

  .hero-text {
    font-size: 32px;
  }

  .nav-center,
  .nav-right {
    display: none;
  }
}

@media screen and (max-width: 480px) {
  .hero-text {
    font-size: 24px;
  }
}

@media screen and (max-width: 380px) {
  .hero-text {
    font-size: 20px;
  }
}

